--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.1.1",
     "astro": "^5.0.5",
     "sass": "^1.72.0",
-    "@astrojs/sitemap": "^3.1.1",
     "schema-dts": "^1.1.2",
     "swiper": "^11.0.7"
+  },
+  "devDependencies": {
+    "wrangler": "^3.99.0"
   }
 }
